--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 
 # Command to install dependencies
 install:
-    pip install -r requirements.txt
+    pip install -r flask/requirements.txt
