--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ jobs:
             - docker push eu.gcr.io/xomnia-search-engine-training/flask:latest
         - stage: k8s
           script:
-            - curl https://sdk.cloud.google.com | bash;
+            - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
+            - source /home/travis/google-cloud-sdk/path.bash.inc
             - gcloud version
 #            - install gcloud
 #            - authenticate gcloud
