--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ jobs:
             - gcloud components update kubectl || true
             - echo $REGISTRY_KEY > lekeyfile.json
             - gcloud auth activate-service-account $GCLOUD_EMAIL --key-file lekeyfile.json
-            - gcloud container clusters get-credentials make-it-binger-cluster --zone europe-west1-c - project xomnia-search-engine-training
+            - gcloud container clusters get-credentials make-it-binger-cluster --zone europe-west1-c --project xomnia-search-engine-training
             - kubectl apply -f deployment/flask.yaml
             - kubectl delete pods -l app=flask
